--- a/makati.html
+++ b/makati.html
@@ -92,29 +92,30 @@
         </div>
         <div class="row" style="height: 400px;">
             <div class="col-lg-8" style="height: 100%;padding: 0px;">
-                <a href="Image/Clinics/clark1.png" data-lightbox="roadtrip" data-title="Right Corridor">
+                <a href="Image/Clinics/makati1.jpeg" data-lightbox="roadtrip" data-title="Right Corridor">
                     <div class="divLeftImg"
-                        style="background: url(Image/Clinics/clark1.png);background-size:cover;background-position: 50% 50%;">
+                        style="background: url(Image/Clinics/makati1.jpeg);background-size:cover;background-position: 50% 50%;">
 
                     </div>
                 </a>
             </div>
             <div class="col-lg-4" style="height: 100%;">
-                <a href="Image/Clinics/clark2.png" data-lightbox="roadtrip" data-title="Reception">
-                    <div class="divRightImg" style="background: url(Image/Clinics/clark2.png);background-size:cover;">
+                <a href="Image/Clinics/makati2.jpeg" data-lightbox="roadtrip" data-title="Reception">
+                    <div class="divRightImg" style="background: url(Image/Clinics/makati2.jpeg);background-size:cover;">
 
                     </div>
                 </a>
-                <a href="Image/Clinics/clark3.png" data-lightbox="roadtrip" data-title="Lobby">
-                    <div class="divRightImg1" style="background: url(Image/Clinics/clark3.png);background-size:cover;">
+                <a href="Image/Clinics/makati3.jpeg" data-lightbox="roadtrip" data-title="Lobby">
+                    <div class="divRightImg1"
+                        style="background: url(Image/Clinics/makati3.jpeg);background-size:cover;">
                         <div class="divShade">
                             <p class="pMorePhotos">+2</p>
                         </div>
                     </div>
                 </a>
-                <a href="Image/Clinics/clark4.png" data-lightbox="roadtrip" data-title="Lobby"
+                <a href="Image/Clinics/makati4.jpeg" data-lightbox="roadtrip" data-title="Lobby"
                     style="display: none;"></a>
-                <a href="Image/Clinics/clark5.png" data-lightbox="roadtrip" data-title="Lobby"
+                <a href="Image/Clinics/makati5.jpeg" data-lightbox="roadtrip" data-title="Lobby"
                     style="display: none;"></a>
             </div>
         </div>
@@ -511,49 +512,11 @@
                             <div class="col-lg-3">
                                 <div class="box" style="margin-top: 20px;">
                                     <div class="form-inline">
-                                        <img src="Image/Services/hr.png" class="img-fluid"
+                                        <img src="Image/Services/heart.png" class="img-fluid"
                                             style="width: 25px;margin-top: 0px;">
                                         <div style="margin-left: 20px;">
-                                            <p class="pDoctor">General Practitioner</p>
-                                            <p class="pTimeDoctor">08:00AM - 05:00PM</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3">
-                                <div class="box" style="margin-top: 20px;">
-                                    <div class="form-inline">
-                                        <img src="Image/Services/healthcare-and-medical.png" class="img-fluid"
-                                            style="width: 25px;margin-top: 0px;">
-                                        <div style="margin-left: 20px;">
-                                            <p class="pDoctor">Internal Medicine</p>
-                                            <p class="pTimeDoctor">08:00PM - 11:00PM</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-3">
-                                <div class="box" style="margin-top: 20px;">
-                                    <div class="form-inline">
-                                        <img src="Image/Services/doctor.png" class="img-fluid"
-                                            style="width: 25px;margin-top: 0px;">
-                                        <div style="margin-left: 20px;">
-                                            <p class="pDoctor">Family Medecine</p>
-                                            <p class="pTimeDoctor">10:00AM - 12:30PM</p>
-                                            <p class="pTimeDoctor" style="margin-top: 0px;">02:00PM - 05:30PM</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3">
-                                <div class="box" style="margin-top: 20px;">
-                                    <div class="form-inline">
-                                        <img src="Image/Services/fetus.png" class="img-fluid"
-                                            style="width: 25px;margin-top: 0px;">
-                                        <div style="margin-left: 20px;">
-                                            <p class="pDoctor">OB - Gynecology</p>
-                                            <p class="pTimeDoctor">08:00AM - 12:00PM</p>
+                                            <p class="pDoctor">Cardiology</p>
+                                            <p class="pTimeDoctor">07:00AM - 09:00AM</p>
                                             <p class="pTimeDoctor" style="margin-top: 0px;">01:00PM - 05:00PM</p>
                                         </div>
                                     </div>
@@ -562,11 +525,24 @@
                             <div class="col-lg-3">
                                 <div class="box" style="margin-top: 20px;">
                                     <div class="form-inline">
-                                        <img src="Image/Services/x-ray.png" class="img-fluid"
+                                        <img src="Image/Services/dentistry.png" class="img-fluid"
                                             style="width: 25px;margin-top: 0px;">
                                         <div style="margin-left: 20px;">
-                                            <p class="pDoctor">Radiology/Sonology</p>
-                                            <p class="pTimeDoctor">01:00AM - 03:00PM</p>
+                                            <p class="pDoctor">Dentistry</p>
+                                            <p class="pTimeDoctor">10:00AM - 03:00PM</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3">
+                                <div class="box" style="margin-top: 20px;">
+                                    <div class="form-inline">
+                                        <img src="Image/Services/spots.png" class="img-fluid"
+                                            style="width: 25px;margin-top: 0px;">
+                                        <div style="margin-left: 20px;">
+                                            <p class="pDoctor">Dermatology</p>
+                                            <p class="pTimeDoctor">10:00AM - 02:00PM</p>
                                         </div>
                                     </div>
                                 </div>
@@ -574,11 +550,111 @@
                             <div class="col-lg-3">
                                 <div class="box" style="margin-top: 20px;">
                                     <div class="form-inline">
-                                        <img src="Image/Services/gloves.png" class="img-fluid"
+                                        <img src="Image/Services/earnose.png" class="img-fluid"
+                                            style="width: 25px;margin-top: 0px;">
+                                        <div style="margin-left: 20px;">
+                                            <p class="pDoctor">ENT</p>
+                                            <p class="pTimeDoctor">09:00AM - 12:00PM</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="box" style="margin-top: 20px;">
+                                    <div class="form-inline">
+                                        <img src="Image/Services/familymedecine.png" class="img-fluid"
+                                            style="width: 25px;margin-top: 0px;">
+                                        <div style="margin-left: 20px;">
+                                            <p class="pDoctor">Family Medicine</p>
+                                            <p class="pTimeDoctor">08:00AM - 05:00PM</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="box" style="margin-top: 20px;">
+                                    <div class="form-inline">
+                                        <img src="Image/Services/generalmedecine.png" class="img-fluid"
+                                            style="width: 25px;margin-top: 0px;">
+                                        <div style="margin-left: 20px;">
+                                            <p class="pDoctor">General Medicine</p>
+                                            <p class="pTimeDoctor">08:00 AM - 05:00 PM</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="box" style="margin-top: 20px;">
+                                    <div class="form-inline">
+                                        <img src="Image/Services/Gynecology.png" class="img-fluid"
+                                            style="width: 25px;margin-top: 0px;">
+                                        <div style="margin-left: 20px;">
+                                            <p class="pDoctor">OB - Gynecology</p>
+                                            <p class="pTimeDoctor">08:00AM - 12:00PM</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="box" style="margin-top: 20px;">
+                                    <div class="form-inline">
+                                        <img src="Image/Services/oph.png" class="img-fluid"
+                                            style="width: 25px;margin-top: 0px;">
+                                        <div style="margin-left: 20px;">
+                                            <p class="pDoctor">Ophthalmology</p>
+                                            <p class="pTimeDoctor">02:00PM - 05:00PM</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="box" style="margin-top: 20px;">
+                                    <div class="form-inline">
+                                        <img src="Image/Services/pulmology.png" class="img-fluid"
+                                            style="width: 25px;margin-top: 0px;">
+                                        <div style="margin-left: 20px;">
+                                            <p class="pDoctor">Pulmology</p>
+                                            <p class="pTimeDoctor">09:00AM - 12:00PM</p>
+                                            <p class="pTimeDoctor" style="margin-top: 0px;">09:00AM - 12:00PM</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="box" style="margin-top: 20px;height: auto !important;">
+                                    <div class="form-inline">
+                                        <img src="Image/Services/radiology.png" class="img-fluid"
+                                            style="width: 25px;margin-top: 0px;">
+                                        <div style="margin-left: 20px;">
+                                            <p class="pDoctor">Radiology/Sonology</p>
+                                            <p class="pTimeDoctor">07:30AM - 08:30AM</p>
+                                            <p class="pTimeDoctor" style="margin-top: 0px;">09:30AM - 11:00AM</p>
+                                            <p class="pTimeDoctor" style="margin-top: 0px;">01:30PM - 04:00PM</p>
+                                            <p class="pTimeDoctor" style="margin-top: 0px;">By: Appointment</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="box" style="margin-top: 20px;">
+                                    <div class="form-inline">
+                                        <img src="Image/Services/rehabilitiation.png" class="img-fluid"
+                                            style="width: 25px;margin-top: 0px;">
+                                        <div style="margin-left: 20px;">
+                                            <p class="pDoctor">Rehabilitation</p>
+                                            <p class="pTimeDoctor">10:00AM - 12:00PM</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="box" style="margin-top: 20px;">
+                                    <div class="form-inline">
+                                        <img src="Image/Services/surgery.png" class="img-fluid"
                                             style="width: 25px;margin-top: 0px;">
                                         <div style="margin-left: 20px;">
                                             <p class="pDoctor">Surgery</p>
-                                            <p class="pTimeDoctor">By: Appointment</p>
+                                            <p class="pTimeDoctor">03:00PM - 05:00PM</p>
                                         </div>
                                     </div>
                                 </div>
