--- a/clinic.html
+++ b/clinic.html
@@ -20,7 +20,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500&family=Manrope:wght@400;500;600;700&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Our Clinics</title>
 </head>
 
 <body>
@@ -89,12 +89,14 @@
                         <p class="pWe">We offer <br>comprehensive<br>Various services.</p>
                         <p class="pWeSub">Currently, we have 13 clinic branches. 8 in Metro Manila, 2 in Laguna, 1 in
                             Pampanga, and 2 in Cebu</p>
-                        <button class="learn-more">
-                            <span class="circle" aria-hidden="true">
-                                <span class="icon arrow"></span>
-                            </span>
-                            <span class="button-text">Learn More</span>
-                        </button>
+                        <a href="#services">
+                            <button class="learn-more" href="#services">
+                                <span class="circle" aria-hidden="true">
+                                    <span class="icon arrow"></span>
+                                </span>
+                                <span class="button-text">Learn More</span>
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -272,7 +274,7 @@
             </div>
         </div>
     </div>
-    <div class="container conBox">
+    <div class="container conBox" id="services">
         <div class="row" style="margin-top: 70px;">
             <div class="col-lg-4" style="padding-right: 30px;">
                 <p class="pCheck">Check out our offered services</p>
