--- a/clinic.html
+++ b/clinic.html
@@ -147,7 +147,12 @@
         <div class="row" style="margin-top: 70px;;">
             <div class="col-lg-12 text-center">
                 <p class="pOur">Our Clinics Locations</p>
-                <label class="pSub">Currently, we have 13 clinic branches.
+                <hr style="background-color: #00C853;
+                height: 2px;
+                width: 55px;
+                margin: 0 auto;
+                margin-top: -10px;">
+                <label class="pSub" style="margin-top: 10px;">Currently, we have 13 clinic branches.
                     8 in Metro Manila, 2 in Laguna, 1 in Pampanga, and 2 in Cebu.</label>
             </div>
         </div>
@@ -276,9 +281,14 @@
     </div>
     <div class="container conBox" id="services">
         <div class="row" style="margin-top: 70px;">
-            <div class="col-lg-4" style="padding-right: 30px;">
-                <p class="pCheck">Check out our offered services</p>
-                <p class="pNote">Note! Some of our services are available only in selected clinics.</p>
+            <div class="col-lg-12 text-center">
+                <p class="pCheck">Our Services</p>
+                <hr style="background-color: #00C853;
+                height: 2px;
+                width: 55px;
+                margin: 0 auto;
+                margin-top: -10px;">
+                <p class="pNote" style="margin-top: 10px;">Note! Some of our services are available only in selected clinics.</p>
             </div>
             <div class="col-lg-4">
                 <div class="boxServices">
@@ -302,6 +312,18 @@
                     <p class="pServicesDesc">A Holter monitor is a battery-operated portable device that measures and
                         records your heart's activity (ECG) continuously for 24 hours or longer. The device is the size
                         of a small camera.</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="boxServices">
+                    <div class="boxImage" style="background-color: #ebedfe;">
+                        <img src="Image/Services/ultrasound.png" class="img-fluid"
+                            style="width: 40px;margin-top:14px;margin-left: 15px;">
+                    </div>
+                    <p class="pServices">Ultrasound</p>
+                    <p class="pServicesDesc">Ultrasound imaging uses sound waves to produce pictures of the inside of
+                        the body. It is used to help diagnose the causes of pain, swelling and infection in the body’s
+                        internal organs.</p>
                 </div>
             </div>
         </div>
