--- a/clinic.html
+++ b/clinic.html
@@ -51,7 +51,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid conNavbar">
         <div class="container con" style="margin-top:-14px;">
             <nav class="navbar navbar-expand-md navbar-light" style="padding: 0px 0px;">
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse">
@@ -113,7 +113,7 @@
                         </div>
                         <p class="pTitleBox">Emergency Call</p>
                     </div>
-                    <p class="pText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <p class="pText">Any questions? You can contact us below.</p>
                     <p class="pCall">Call Us: <span>63-2-840-0588</span></p>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                         </div>
                         <p class="pTitleBox">Book Appointment</p>
                     </div>
-                    <p class="pText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <p class="pText">We can book an appointment for you.</p>
                     <p class="pCall" style="font-weight: 600;color: #00c974;">Appointment &#x2b;</p>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                         </div>
                         <p class="pTitleBox">Doctor's Timetable</p>
                     </div>
-                    <p class="pText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <p class="pText">You can check the timetable of our doctors.</p>
                     <p class="pCall" style="font-weight: 600;color: #FFB389;">Know More &#x2b;</p>
                 </div>
             </div>
