--- a/cebuIT.html
+++ b/cebuIT.html
@@ -53,7 +53,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid conNavbar">
         <div class="container con" style="margin-top:-14px;">
             <nav class="navbar navbar-expand-md navbar-light" style="padding: 0px 0px;">
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse">
@@ -85,22 +85,22 @@
             <div class="col-lg-12">
                 <p class="pLocation">Cebu IT Park</p>
                 <div class="form-inline" style="margin-top: -5px;">
-                    <img src="Image/maps.png" class="img-fluid" style="width: 20px;margin-top: -15px;">
+                    <img src="Image/maps.png" class="img-fluid imgMap" style="width: 20px;margin-top: -15px;">
                     <p class="pAddress"> Unit 203 TGU Tower, Block 1, Lots 6-7, Phase 1, Asiatown, IT Park Apas, Cebu
                         City, Cebu</p>
                 </div>
             </div>
         </div>
-        <div class="row" style="height: 400px;">
-            <div class="col-lg-8" style="height: 100%;padding: 0px;">
-                <a href="Image/Clinics/cebuit1.jpeg" data-lightbox="roadtrip" data-title="Right Corridor">
+        <div class="row row1" style="height: 400px;">
+            <div class="col-lg-8 col-sm-8 col-8" style="height: 100%;padding: 0px;">
+                <a href="Image/Clinics/cebuit1.jpeg " data-lightbox="roadtrip" data-title="Right Corridor">
                     <div class="divLeftImg"
                         style="background: url(Image/Clinics/cebuit1.jpeg);background-size:cover;background-position: 50% 50%;">
 
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4" style="height: 100%;">
+            <div class="col-lg-4 col-sm-4 col-4" style="height: 100%;">
                 <a href="Image/Clinics/cebuit2.jpeg" data-lightbox="roadtrip" data-title="Reception">
                     <div class="divRightImg" style="background: url(Image/Clinics/cebuit2.jpeg);background-size:cover;">
 
@@ -123,7 +123,7 @@
     </div>
     <div class="container">
         <div class="row" style="margin-top: 40px;">
-            <div class="col-lg-4">
+            <div class="col-lg-4 colBox">
                 <div>
                     <div class="form-inline">
                         <div class="divImage">
@@ -137,7 +137,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 colBox">
                 <div>
                     <div class="form-inline">
                         <div class="divImage">
@@ -151,7 +151,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 colBox">
                 <div>
                     <div class="form-inline">
                         <div class="divImage" style="margin-top: -30px;">
