--- a/clinic.html
+++ b/clinic.html
@@ -20,6 +20,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500&family=Manrope:wght@400;500;600;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Our Clinics</title>
 </head>
 
@@ -160,7 +161,11 @@
             <div class="col-lg-12">
                 <div class="card-deck">
                     <div class="card">
-                        <img class="card-img-top" src="Image/alabang.jpeg" alt="Card image cap">
+                        <div class="inner">
+                            <a href="alabang.html">
+                                <img class="card-img-top" src="Image/alabang.jpeg" alt="Card image cap">
+                            </a>
+                        </div>
                         <div class="card-body" style="padding: 0px;">
                             <h5 class="card-title">Alabang</h5>
                             <p class="card-text"> 2nd Flr. Sycamore ARCS 1 Building, Buencamino Street cor.
@@ -169,7 +174,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Image/bgc.jpg" alt="Card image cap">
+                        <div class="inner">
+                            <a href="bgc.html">
+                                <img class="card-img-top" src="Image/bgc.jpg" alt="Card image cap">
+                            </a>
+                        </div>
                         <div class="card-body" style="padding: 0px;">
                             <h5 class="card-title">BGC</h5>
                             <p class="card-text"> GF Citi Plaza 34th Street cor. Lane D, Bonifacio Global City, Taguig
@@ -178,7 +187,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Image/calamba.jpeg" alt="Card image cap">
+                        <div class="inner">
+                            <a href="calamba.html">
+                                <img class="card-img-top" src="Image/calamba.jpeg" alt="Card image cap">
+                            </a>
+                        </div>
                         <div class="card-body" style="padding: 0px;">
                             <h5 class="card-title">Calamba, Laguna</h5>
                             <p class="card-text">Unit 201-203, SQA Corporation Center, Baranggay 1, National Highway
@@ -188,7 +201,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Image/Cebu.jpg" alt="Card image cap">
+                        <div class="inner">
+                            <a href="cebu.html">
+                                <img class="card-img-top" src="Image/Cebu.jpg" alt="Card image cap">
+                            </a>
+                        </div>
                         <div class="card-body" style="padding: 0px;">
                             <h5 class="card-title">Cebu Cybergate</h5>
                             <p class="card-text"> Level 3, Room 00309 & 00302, Robinsons Cybergate, Don Gil Garcia & J.
@@ -198,7 +215,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Image/cebuit.jpeg" alt="Card image cap">
+                        <div class="inner">
+                            <a href="cebuIT.html">
+                                <img class="card-img-top" src="Image/cebuit.jpeg" alt="Card image cap">
+                            </a>
+                        </div>
                         <div class="card-body" style="padding: 0px;">
                             <h5 class="card-title">Cebu IT Park</h5>
                             <p class="card-text"> Unit 203 TGU Tower, Block 1, Lots 6-7, Phase 1, Asiatown, IT Park
@@ -208,7 +229,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Image/clark.png" alt="Card image cap">
+                        <div class="inner">
+                            <a href="clark.html">
+                                <img class="card-img-top" src="Image/clark.png" alt="Card image cap">
+                            </a>
+                        </div>
                         <div class="card-body" style="padding: 0px;">
                             <h5 class="card-title">Clark</h5>
                             <p class="card-text"> GF BPO Building 5, SM City Clark, M.A. Roxas Highway, Brgy.
@@ -218,7 +243,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Image/makati.jpeg" alt="Card image cap">
+                        <div class="inner">
+                            <a href="makati.html">
+                                <img class="card-img-top" src="Image/makati.jpeg" alt="Card image cap">
+                            </a>
+                        </div>
                         <div class="card-body" style="padding: 0px;">
                             <h5 class="card-title">Makati</h5>
                             <p class="card-text"> 6F Filomena Building, #104 Amorsolo St. Legaspi Village, Makati City
@@ -227,7 +256,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Image/manila.jpeg" alt="Card image cap">
+                        <div class="inner">
+                            <a href="manila.html">
+                                <img class="card-img-top" src="Image/manila.jpeg" alt="Card image cap">
+                            </a>
+                        </div>
                         <div class="card-body" style="padding: 0px;">
                             <h5 class="card-title">Manila</h5>
                             <p class="card-text"> 5th Floor, Times Plaza Building, Taft corner U.N. Avenue, Ermita,
@@ -237,7 +270,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Image/ortigas.jpeg" alt="Card image cap">
+                        <div class="inner">
+                            <a href="ortigas.html">
+                                <img class="card-img-top" src="Image/ortigas.jpeg" alt="Card image cap">
+                            </a>
+                        </div>
                         <div class="card-body" style="padding: 0px;">
                             <h5 class="card-title">Ortigas</h5>
                             <p class="card-text"> Ground Floor, AIC Grande Tower, Sapphire Street corner Garnet Road,
@@ -247,7 +284,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Image/pasay.jpeg" alt="Card image cap">
+                        <div class="inner">
+                            <a href="pasay.html">
+                                <img class="card-img-top" src="Image/pasay.jpeg" alt="Card image cap">
+                            </a>
+                        </div>
                         <div class="card-body" style="padding: 0px;">
                             <h5 class="card-title">Pasay</h5>
                             <p class="card-text"> Scape Building, 24 Diosdado Macapagal Avenue, Pearl Drive CBP,
@@ -257,7 +298,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Image/north.png" alt="Card image cap">
+                        <div class="inner">
+                            <a href="northedsa.html">
+                                <img class="card-img-top" src="Image/north.png" alt="Card image cap">
+                            </a>
+                        </div>
                         <div class="card-body" style="padding: 0px;">
                             <h5 class="card-title">North Edsa</h5>
                             <p class="card-text"> GF, 2F PCS Building, 992 EDSA, Baranggay Ramon Magsaysay, Quezon City
@@ -266,7 +311,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Image/starosa.jpeg" alt="Card image cap">
+                        <div class="inner">
+                            <a href="starosa.html">
+                                <img class="card-img-top" src="Image/starosa.jpeg" alt="Card image cap">
+                            </a>
+                        </div>
                         <div class="card-body" style="padding: 0px;">
                             <h5 class="card-title">Sta Rosa</h5>
                             <p class="card-text"> 2nd Floor, Carvajal Building 2, National Highway, Balibago City, Sta.
@@ -288,7 +337,8 @@
                 width: 55px;
                 margin: 0 auto;
                 margin-top: -10px;">
-                <p class="pNote" style="margin-top: 10px;">Note! Some of our services are available only in selected clinics.</p>
+                <p class="pNote" style="margin-top: 10px;">Note! Some of our services are available only in selected
+                    clinics.</p>
             </div>
             <div class="col-lg-4">
                 <div class="boxServices">
@@ -685,6 +735,10 @@
             </div>
         </div>
     </div>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 <script>
     var mymap = L.map('mapid').setView([14.5624078, 121.0122034], 16);
